# Shua-Shua

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  ROADMAP.md
Doc/: algo.md  algo_ch.md  v2design.md
Doc/ch/: Architecture+ch.md  Architecture_ch.md  Core_Design+ch.md  Core_Design_ch.md  Frontend_Design+ch.md  Frontend_Design_ch.md  Operations+ch.md  Operations_ch.md  algo_ch.md
Doc/en/: Architecture.md  Core_Design.md  Frontend_Design.md  Operations.md  algo.md
scripts/: README.md  build-wasm.sh  fetch-covers.mjs  wasm_smoke.mjs
src/: api.hpp  bindings.cpp  dot.hpp  feature_op.hpp  item_store.hpp  main.cpp  mix_op.hpp  note.hpp  operator.hpp  recall_op.hpp  rerank_op.hpp  scheduler.hpp  score_op.hpp  synthetic.hpp
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/public/covers/: manifest.json
web/src/: App.tsx  covers.ts  engine.ts  presentation.ts  profile.ts  styles.css
web/src/components/: ColdStart.tsx  Feed.tsx  NoteCard.tsx  PersonaTabs.tsx  ProfilePanel.tsx  Sidebar.tsx  TracePanel.tsx
